--- a/html/kontakty.html
+++ b/html/kontakty.html
@@ -6,12 +6,12 @@
   <meta name="description" content="KAMENSKÝ – profesionální stavební služby. Stavby rodinných domů, průmyslových objektů a rekonstrukce s tradicí a kvalitou." />
   <meta name="keywords" content="stavby, konstrukce, rekonstrukce, rodinné domy, průmyslové objekty" />
   <title>KAMENSKÝ – stavby a konstrukce | Profesionální stavební služby</title>
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="../style/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="style/button.css">
-  <link rel="stylesheet" href="style/loading.css">
-  <link rel="webside icon" type="png" href="src/logo/KAMENSKY - negativ logo - bily napis - pruhledne pozadi.png" >
+  <link rel="stylesheet" href="../style/button.css">
+  <link rel="stylesheet" href="../style/loading.css">
+  <link rel="webside icon" type="png" href="../src/logo/KAMENSKY - negativ logo - bily napis - pruhledne pozadi.png" >
   
 </head>
 
@@ -64,22 +64,21 @@
       <line x1="9" y1="12" x2="15" y2="12"></line>
     </svg>
   </div>
-  
+  <br>
   <header>
     <div class="container">
       <div class="logo-container">
-        <a href="index.html" class="logo-link">
-          <img src="src/logo/KAMENSKY - negativ logo - bily napis - pruhledne pozadi.png" alt="KAMENSKÝ Logo" class="header-logo">
+        <a href="../index.html" class="logo-link">
+          <img src="../src/logo/KAMENSKY - negativ logo - bily napis - pruhledne pozadi.png" alt="KAMENSKÝ Logo" class="header-logo">
         </a>
       </div>
       <nav>
         <ul>
-          <li><a href="#domu">Domů</a></li>
-          <li><a href="#onas">O nás</a></li>
-          <li><a href="#sluzby">Služby</a></li>
-          <li><a href="#reference">Reference</a></li>
-          <li><a href="html/osvedceni-gallery.html">Certifikáty</a></li>
-          <li><a href="html/kontakty.html">Kontakt</a></li>
+          <li><a href="../index.html">Domů</a></li>
+          <li><a href="../index.html#onas">O nás</a></li>
+          <li><a href="../index.html#sluzby">Služby</a></li>
+          <li><a href="../index.html#reference">Reference</a></li>
+          <li><a href="kontakty.html">Kontakt</a></li>
 
           <label class="theme-switch">
   <input type="checkbox" class="theme-switch__checkbox">
@@ -106,80 +105,184 @@
     </div>
   </header>
 
-  <section class="hero" id="domu">
+  <section id="team" class="content">
     <div class="container">
-      <h1>Stavby a konstrukce s jistotou</h1>
-      <p>Profesionální stavební služby s tradicí a kvalitou. Od návrhu po realizaci - vaše vize v našich rukou.</p>
-    </div>
-  </section>
-
-  <section id="onas" class="content">
-    <div class="container">
-      <h2>O společnosti</h2>
-      <p>Jsme stavební firma s více než 30+ lety zkušeností v oboru. Specializujeme se na komplexní stavební služby od výstavby rodinných domů a průmyslových objektů po rekonstrukce historických budov.</p>
-      <p>Naše firma je na trhu od roku 2004 jako pokračovatel firmy Pavel Kamenský - Vzduchotechnika, která byla založena v roce 1990. Hlavní náplní bylo pokračování v oblasti vzduchotechniky. Na základě poptávky jsme rozšířili podnikání na oblast výroby a montáže ocelových konstrukcí, výrobní a skladovací haly, mostní konstrukce, lávky, speciální konstrukce pro montáže technologií, stavební činnost - zakládání staveb, práce HSV a PSV</p>
-    </div>
-  </section>
-
-  <section id="sluzby" class="content">
-    <div class="container">
-      <h2>Naše služby</h2>
-      <ul>
-        <li><strong>DODÁVKY NA KLÍČ</strong> - Rekonstrukce rekreačních objektů, půdní vestavby. Zajištění projektové dokumentace, stavebního povolení až po kolaudaci. <p></p></li>
+      <h2>Vedení společnosti a kontakty:</h2>
+      <div class="team-grid">
+        <div class="employee-card">
+          <div class="employee-header">
+            <div class="employee-avatar">
+              <i class="fas fa-user-tie"></i>
+            </div>
+            <div class="employee-info">
+              <h3>Pavel Kamenský</h3>
+              <span class="employee-position">Jednatel</span>
+            </div>
+          </div>
+          <div class="employee-contact">
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+420777726010">777 726 010</a>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:kamensky@kamensky.cz">kamensky@kamensky.cz</a>
+            </div>
+          </div>
+        </div>
         <br>
-        <li><strong> PRŮMYSLOVÉ STAVBY</strong> - Provádění výstavby průmyslových objektů včetně napojení na inženýrské sítě a komunikace.</li>
+        <div class="employee-card">
+          <div class="employee-header">
+            <div class="employee-avatar">
+              <i class="fas fa-chart-line"></i>
+            </div>
+            <div class="employee-info">
+              <h3>Pavel Kamenský ml.</h3>
+              <span class="employee-position">Obchodní ředitel</span>
+            </div>
+          </div>
+          <div class="employee-contact">
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+420777726020">777 726 020</a>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:pavel.kamensky@kamensky.cz">pavel.kamensky@kamensky.cz</a>
+            </div>
+          </div>
+        </div>
         <br>
-        <li><strong>INŽENÝRSKÁ ČINNOST</strong> - Zajištění vyhotovení projektové dokumentace, kolaudace staveb, revizní zprávy, vyřízení stanovisek se správci IS.</li>
+        <div class="employee-card">
+          <div class="employee-header">
+            <div class="employee-avatar">
+              <i class="fas fa-drafting-compass"></i>
+            </div>
+            <div class="employee-info">
+              <h3>Jakub Mikláš</h3>
+              <span class="employee-position">Příprava staveb a konstrukcí</span>
+            </div>
+          </div>
+          <div class="employee-contact">
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+420777726582">777 726 582</a>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:jakub.miklas@kamensky.cz">jakub.miklas@kamensky.cz</a>
+            </div>
+          </div>
+        </div>
         <br>
-        <li><strong> OCELOVÉ KONSTRUKCE</strong> - Výroba a montáže ocelových konstrukcí hal, lávek, oplocení a ocelové konstrukce technologických celků.</li>
+        <div class="employee-card">
+          <div class="employee-header">
+            <div class="employee-avatar">
+              <i class="fas fa-wind"></i>
+            </div>
+            <div class="employee-info">
+              <h3>Jan Šenkyřík</h3>
+              <span class="employee-position">Projekce a koordinace vzduchotechniky</span>
+            </div>
+          </div>
+          <div class="employee-contact">
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+420777726024">777 726 024</a>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:jan.senkyrik@kamensky.cz">jan.senkyrik@kamensky.cz</a>
+            </div>
+          </div>
+        </div>
         <br>
-        <li><strong> BYTOVÁ VÝSTAVBA</strong> - Výstavba nových bytových jednotek a RD dle zpracované projektové dokumentace a požadavků objednatele</li>
+        <div class="employee-card">
+          <div class="employee-header">
+            <div class="employee-avatar">
+              <i class="fas fa-calculator"></i>
+            </div>
+            <div class="employee-info">
+              <h3>Bohumila Roháčková</h3>
+              <span class="employee-position">Účetní</span>
+            </div>
+          </div>
+          <div class="employee-contact">
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+420777726581">777 726 581</a>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:bohumila.rohackova@kamensky.cz">bohumila.rohackova@kamensky.cz</a>
+            </div>
+          </div>
+        </div>
         <br>
-        <li><strong>REKONSTRUKCE OBJEKTŮ</strong> - Realizace rekonstrukcí a modernizací objektů pro bydlení a občanskou vybavenost, průmyslových budov a hal, sanace objektů včetně demolic.</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="reference" class="content">
-    <div class="container">
-      <h2>Reference</h2>
-      <p>Prohlédněte si ukázky našich realizovaných projektů. Každá stavba je důkazem našeho řemesla a přístupu ke klientům.</p>
-      <div class="gallery">
-        <div class="gallery-item">
-          <img src="src/pic/1.jpg" alt="Moderní rodinný dům - Praha" data-index="0" loading="lazy" />
+        <div class="employee-card">
+          <div class="employee-header">
+            <div class="employee-avatar">
+              <i class="fas fa-warehouse"></i>
+            </div>
+            <div class="employee-info">
+              <h3>Zdeňka Nečesaná</h3>
+              <span class="employee-position">Sklad</span>
+            </div>
+          </div>
+          <div class="employee-contact">
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+420777726019">777 726 019</a>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:zdenka.necesana@kamensky.cz">zdenka.necesana@kamensky.cz</a>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="src/pic/2.jpg" alt="Rekonstrukce průmyslového objektu - Brno" data-index="1" loading="lazy" />
+        <br>
+        <div class="employee-card">
+          <div class="employee-header">
+            <div class="employee-avatar">
+              <i class="fas fa-hard-hat"></i>
+            </div>
+            <div class="employee-info">
+              <h3>Lubomír Kalinec</h3>
+              <span class="employee-position">Mistr výroby</span>
+            </div>
+          </div>
+          <div class="employee-contact">
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+420777726029">777 726 029</a>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:lubomir.kalinec@kamensky.cz">lubomir.kalinec@kamensky.cz</a>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="src/pic/3.jpg" alt="Rodinný dům s bazénem - Ostrava" data-index="2" loading="lazy" />
-        </div>
-        <div class="gallery-item">
-          <img src="src/pic/4.jpg" alt="Komerční centrum - Plzeň" data-index="3" loading="lazy" />
-        </div>
-        <div class="gallery-item">
-          <img src="src/pic/5.jpg" alt="Rekonstrukce historické budovy - České Budějovice" data-index="4" loading="lazy" />
-        </div>
-        <div class="gallery-item">
-          <img src="src/pic/6.jpg" alt="Rodinná vila - Liberec" data-index="5" loading="lazy" />
-        </div>
-        <div class="gallery-item">
-          <img src="src/pic/7.jpg" alt="Průmyslová hala - Olomouc" data-index="6" loading="lazy" />
-        </div>
-        <div class="gallery-item">
-          <img src="src/pic/8.jpg" alt="Bytový dům - Hradec Králové" data-index="7" loading="lazy" />
-        </div>
-        <div class="gallery-item">
-          <img src="src/pic/9.jpg" alt="Kancelářské prostory - Pardubice" data-index="8" loading="lazy" />
-        </div>
-        <div class="gallery-item">
-          <img src="src/pic/10.jpg" alt="Rodinný dům - Karlovy Vary" data-index="9" loading="lazy" />
-        </div>
-        <div class="gallery-item">
-          <img src="src/pic/11.jpg" alt="Rekonstrukce bytu - Ústí nad Labem" data-index="10" loading="lazy" />
-        </div>
-        <div class="gallery-item">
-          <img src="src/pic/12.jpg" alt="Rodinný dům - Jihlava" data-index="11" loading="lazy" />
+        <br>
+        <div class="employee-card">
+          <div class="employee-header">
+            <div class="employee-avatar">
+              <i class="fas fa-user-cog"></i>
+            </div>
+            <div class="employee-info">
+              <h3>Barbora Hradilová</h3>
+              <span class="employee-position">Odborný administrativní pracovník</span>
+            </div>
+          </div>
+          <div class="employee-contact">
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+420777726023">777 726 023</a>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:bara.hradilova@kamensky.cz">bara.hradilova@kamensky.cz</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -211,7 +314,6 @@
       </div>
       <p>IČ: 619 725 84</p>
       <p>DIČ: CZ 619 725 84</p>
-      
       
       <div style="margin-top: 50px;">
         <h3 style="color: var(--primary-color); margin-bottom: 20px;">Mapa</h3>
@@ -245,3 +347,4 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
