--- a/html/osvedceni-gallery.html
+++ b/html/osvedceni-gallery.html
@@ -10,8 +10,6 @@
   <link rel="stylesheet" href="../style/gallery.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="../style/button.css">
-  <link rel="stylesheet" href="../style/loading.css">
   <link rel="webside icon" type="png" href="../src/logo/KAMENSKY - negativ logo - bily napis - pruhledne pozadi.png">
 </head>
 
@@ -89,20 +87,16 @@
     </div>
   </header>
 
-  <section class="content">
-    <div class="container">
-      <h2>Certifikáty a osvědčení</h2>
-      <p class="gallery-intro">
-        Prohlédněte si naše profesionální certifikáty a osvědčení, které dokazují kvalitu a odbornost našich stavebních služeb. 
-        Klikněte na jakýkoli obrázek pro zvětšení a detailní zobrazení.
-      </p>
-      
-      <div class="gallery-controls">
-        <button class="filter-btn active" data-filter="all">Vše</button>
-        <button class="filter-btn" data-filter="cert">Certifikáty</button>
-        <button class="filter-btn" data-filter="osv">Osvědčení</button>
+  <section class="gallery-section">
+    <div class="gallery-container">
+      <div class="gallery-header">
+        <h2 class="gallery-title">Certifikáty a osvědčení</h2>
+        <p class="gallery-intro">
+          Prohlédněte si naše profesionální certifikáty a osvědčení, které dokazují kvalitu a odbornost našich stavebních služeb. 
+          Klikněte na jakýkoli obrázek pro zvětšení a detailní zobrazení.
+        </p>
       </div>
-
+      
       <div class="gallery-grid" id="gallery">
         <!-- Images will be loaded dynamically -->
       </div>
